Fixed growing dropboxes and text alignment

--- a/drag-text.css
+++ b/drag-text.css
@@ -200,6 +200,7 @@
 }
 .h5p-drag-dropzone {
   position:relative;
+  top: -0.1em;
   padding-right: 1.65em;
   width: 10em;
   height: 1.25em;
